# islamqa-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.yml  main.py  pyproject.toml
data/: README.md
deploy/: DEPLOY.md  islamqa-mcp.service  islamqa-scrape.service  islamqa-scrape.timer  nginx.conf
scripts/: build_db.py  embed_islamqa.py  fetch_ext_apps.py  scrape_islamqa.py
search/: index.html  script.js  style.css
site/: index.html  script.js  style.css
src/islamqa_mcp/: __init__.py  __main__.py  cli.py  embeddings_index.py  grounding.py  grounding_state.py  middleware_logging.py  openai_fallback.py  query_cache.py  rate_limit.py  server.py  settings.py  stats.py  store.py
src/islamqa_mcp/assets/: ext-apps.bundle.js  islamqa_app.html
src/islamqa_mcp/pipeline/: __init__.py  schema.py
