[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "islamqa-mcp"
version = "0.1.0"
description = "MCP server for IslamQA.info fatwas with semantic search"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.0,<4",
    "mcp>=1.26,<2",
    "numpy>=1.26,<3",
    "openai>=1.0,<2",
    "pydantic>=2.12,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "requests>=2.34.2",
    "tiktoken>=0.7,<1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
islamqa-mcp = "islamqa_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
islamqa_mcp = ["assets/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
